feat: add initial lix page

--- a/website/index.html
+++ b/website/index.html
@@ -1,12 +1,18 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<title>Lix</title>
-		<link rel="stylesheet" href="./src/style.css">
-		<script type="module" src="./src/base/base-router.ts"></script>
-	</head>
-	<body>
-		<base-router>
-	</base-router>
+  <head>
+    <meta charset="UTF-8" />
+	<link rel="stylesheet" href="./src/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite + TS</title>
+  </head>
+  <body>
+    <div id="header"></div>
+    <div id="app"></div>
+    <div id="footer"></div>
+
+    <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="/src/footer.ts"></script>
+    <script type="module" src="/src/header.ts"></script>
+  </body>
 </html>
